@@ -14,24 +14,18 @@ module Sequel
         @model = model
       end
 
-      # Define a named filter for this dataset, see
-      # Model.subset for details.
+      # Alias for where.
       def subset(name, *args, &block)
-        @model.subset(name, *args, &block)
+        where(name, *args, &block)
       end
 
-      # Alias for subset
-      def where(name, *args, &block)
-        subset(name, *args, &block)
-      end
-
-      %w'exclude exclude_having having'.map(&:to_sym).each do |meth|
+      %w'where exclude exclude_having having'.map(&:to_sym).each do |meth|
         define_method(meth) do |name, *args, &block|
           if block || args.flatten.any?{|arg| arg.is_a?(Proc)}
-            @model.def_dataset_method(name){send(meth, *args, &block)}
+            define_method(name){send(meth, *args, &block)}
           else
             key = :"_#{meth}_#{name}_ds"
-            @model.def_dataset_method(name) do
+            define_method(name) do
               cached_dataset(key){send(meth, *args)}
             end
           end
@@ -48,10 +42,10 @@ module Sequel
       def self.def_dataset_caching_method(mod, meth)
         mod.send(:define_method, meth) do |name, *args, &block|
           if block
-            @model.def_dataset_method(name){send(meth, *args, &block)}
+            define_method(name){send(meth, *args, &block)}
           else
             key = :"_#{meth}_#{name}_ds"
-            @model.def_dataset_method(name) do
+            define_method(name) do
               cached_dataset(key){send(meth, *args)}
             end
           end
