@@ -62,7 +62,7 @@ module Sequel
           ret = super
           r = association_reflection(name)
           meth = r.returns_array? ? name : pluralize(name).to_sym
-          def_dataset_method(meth){associated(name)}
+          dataset_module{define_method(meth){associated(name)}}
           ret
         end
 
