@@ -7,13 +7,13 @@ describe "subset_conditions plugin" do
   end
 
   it "should provide *_conditions method return the arguments passed" do
-    @c.subset(:published, :published => true)
+    @c.dataset_module{subset(:published, :published => true)}
     @c.where(@c.published_conditions).sql.must_equal @c.published.sql
 
-    @c.subset(:active, :active)
+    @c.dataset_module{where(:active, :active)}
     @c.where(@c.active_conditions).sql.must_equal @c.active.sql
 
-    @c.subset(:active_published, Sequel.&(:active, :published => true))
+    @c.dataset_module{subset(:active_published, Sequel.&(:active, :published => true))}
     @c.where(@c.active_published_conditions).sql.must_equal @c.active_published.sql
     @c.where(Sequel.&(@c.active_conditions, @c.published_conditions)).sql.must_equal @c.active_published.sql
     @c.where(Sequel.|(@c.active_conditions, @c.published_conditions)).sql.must_equal "SELECT * FROM a WHERE (active OR (published IS TRUE))"
@@ -22,14 +22,14 @@ describe "subset_conditions plugin" do
 
   it "should work with blocks" do
     p1 = proc{{:published=>true}}
-    @c.subset(:published, &p1)
+    @c.dataset_module{subset(:published, &p1)}
     @c.where(@c.published_conditions).sql.must_equal @c.published.sql
 
     p2 = :active
-    @c.subset(:active, p2)
+    @c.dataset_module{subset(:active, p2)}
     @c.where(@c.active_conditions).sql.must_equal @c.active.sql
 
-    @c.subset(:active_published, p2, &p1)
+    @c.dataset_module{subset(:active_published, p2, &p1)}
     @c.where(@c.active_published_conditions).sql.must_equal @c.active_published.sql
     @c.where(Sequel.&(@c.active_conditions, @c.published_conditions)).sql.must_equal @c.active_published.sql
     @c.where(Sequel.|(@c.active_conditions, @c.published_conditions)).sql.must_equal "SELECT * FROM a WHERE (active OR (published IS TRUE))"
