@@ -85,6 +85,7 @@
 </ul></li>
 <li>Subsets:<ul>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/BooleanSubsets.html">boolean_subsets</a>: Automatically creates a subset method for each boolean column.</li>
+<li><a href="rdoc-plugins/classes/Sequel/Plugins/DefDatasetMethod.html">def_dataset_method</a>: Adds Model.def_dataset_method and Model.subset for backwards compatibility.</li>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/InvertedSubsets.html">inverted_subsets</a>: Creates an additional method for each subset, that inverts the subset's conditions.</li>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/SubsetConditions.html">subset_conditions</a>: Creates an additional method for each subset, returning the filter conditions used for the subset.</li>
 </ul></li>
